# py-directus

./: 404.html  CHANGELOG.md  README.md  index.html  pyproject.toml
.github/workflows/: publish-to-pypi.yml
FastAPI_Support/: index.html
FastAPI_Support/lifespan/: index.html
cache/: index.html
cheat_sheet/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
examples/: filters.py  index.html
models/: index.html
py_directus/: __init__.py  directus.py  directus_response.py  filter.py
py_directus/fast_api/: auth.py
py_directus/models/: __init__.py  directus.py
realtime/: index.html
request/: index.html
request/aggregation/: index.html
request/batching/: index.html
search/: search_index.json
translations/: index.html
